ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: app-ingress
spec:
  tls:
    - hosts:
        -
      secretName: cert-testing-tls
  rules:
    - host:
      http:
        paths:
          - backend:
              serviceName: svc
              servicePort: 80
            path: /
